Fix issue where full test titles cannot be seen when truncation occurs. https://github.com/adamgruber/mochawesome-report-generator/issues/65 - Add title attribute so full titles can be seen in title tooltip - Show full test titles when the test is expanded

--- a/src/components/test/test.css
+++ b/src/components/test/test.css
@@ -53,6 +53,12 @@
   @nest .hook & {
     color: var(--black54);
   }
+
+  @nest .expanded & {
+    line-height: 1.5;
+    padding-top: 3px;
+    white-space: normal;
+  }
 }
 
 .icon {
